--- a/railties/lib/rails/templates/rails/welcome/index.html.erb
+++ b/railties/lib/rails/templates/rails/welcome/index.html.erb
@@ -9,12 +9,12 @@
         padding: 0;
         background-color: #f0f0f0;
         font-family: "Lucida Grande", "Bitstream Vera Sans", "Verdana";
-        font-size: 13px;
+        font-size: 12px;
         color: #333;
       }
 
       h1 {
-        font-size: 28px;
+        font-size: 32px;
         color: #000;
       }
 
@@ -28,7 +28,7 @@
 
       #page {
         background-color: #f0f0f0;
-        width: 750px;
+        width: 780px;
         margin: 0;
         margin-left: auto;
         margin-right: auto;
@@ -37,15 +37,15 @@
       #content {
         float: left;
         background-color: white;
-        border: 3px solid #aaa;
+        border: 1px solid #aaa;
         border-top: none;
         padding: 25px;
-        width: 500px;
+        width: 600px;
       }
 
       #sidebar {
         float: right;
-        width: 175px;
+        width: 105px;
       }
 
       #footer {
@@ -87,7 +87,7 @@
       #about-content table {
         margin-top: 10px;
         margin-bottom: 10px;
-        font-size: 11px;
+        font-size: 10px;
         border-collapse: collapse;
       }
       #about-content td {
@@ -156,7 +156,7 @@
       }
       #sidebar ul h3 {
         margin-top: 25px;
-        font-size: 16px;
+        font-size: 14px;
         padding-bottom: 10px;
         border-bottom: 1px solid #ccc;
       }
@@ -193,12 +193,15 @@
       <div id="sidebar">
         <ul id="sidebar-items">
           <li>
-            <h3>Browse the documentation</h3>
+            <h3>|Guides|Tutorials|Screencasts</h3>
             <ul class="links">
+              <li><a href="http://rubyonrails.org/">Ruby on Rails</a></li>
               <li><a href="http://guides.rubyonrails.org/">Rails Guides</a></li>
               <li><a href="http://api.rubyonrails.org/">Rails API</a></li>
               <li><a href="http://www.ruby-doc.org/core/">Ruby core</a></li>
               <li><a href="http://www.ruby-doc.org/stdlib/">Ruby standard library</a></li>
+              <li><a href="http://www.railstutorial.org/book">Rails Tutorial</a></li>
+              <li><a href="http://railscasts.com/">Ruby on Rails Screencasts</a></li>
             </ul>
           </li>
         </ul>
