--- a/railties/lib/rails/templates/rails/welcome/index.html.erb
+++ b/railties/lib/rails/templates/rails/welcome/index.html.erb
@@ -154,11 +154,11 @@
         margin-left: 0;
         padding-left: 0;
       }
-      #sidebar ul h3 {
+      #sidebar ul h1 {
         margin-top: 25px;
-        font-size: 14px;
+        font-size: 16px;
         padding-bottom: 10px;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 0px solid #ccc;
       }
       #sidebar li {
         list-style-type: none;
@@ -193,7 +193,7 @@
       <div id="sidebar">
         <ul id="sidebar-items">
           <li>
-            <h3>|Guides|Tutorials|Screencasts</h3>
+            <h1>#Guides</h1>
             <ul class="links">
               <li><a href="http://rubyonrails.org/">Ruby on Rails</a></li>
               <li><a href="http://guides.rubyonrails.org/">Rails Guides</a></li>
